Fix the sidebar collapse style

--- a/styles/sider.module.less
+++ b/styles/sider.module.less
@@ -6,11 +6,12 @@
 
   :global(.ant-layout-sider-trigger) {
     top: 0;
+    left: 217px;
     bottom: unset;
+    width: 20px !important;
     text-align: right;
     padding-right: 8px;
     height: 30px;
-    width: 228px !important;
     line-height: 30px;
     background: unset;
 
@@ -22,9 +23,9 @@
   }
 
   &.collapsed :global(.ant-layout-sider-trigger) {
-    text-align: center;
     padding-right: unset;
-    width: 30px !important;
+    left: 16px;
+    width: 20px !important;
   }
 }
 
